--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,7 +277,7 @@ ul{
     margin-bottom: 4rem;
 }
 .overlay {
-    background-color: rgba(41, 39, 34, 0.75);
+    background-color: rgba(41, 39, 34, 0.28);
     width: 100%;
     height: 670px;
 }
@@ -741,6 +741,22 @@ input::-ms-input-placeholder {
     margin-top:100px;
 }
 
+.service .mapdiv {
+    width: 550px; 
+    height: 400px; 
+}
+
+/* calender section css*/
+
+.calender{
+    padding-top: 60px;
+    margin: 10%; 
+}
+
+.calender>iframe{
+/*    margin: 10%;*/
+    width: 100%;
+}
 
 /*features section css*/
 
