--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -588,6 +588,7 @@ input::-ms-input-placeholder {
     padding: 0px 15px;
 }
 .navbar-brand>img {
+    width: 165px;
     max-width: 80%;
 }
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus{
