--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -744,7 +744,7 @@ input::-ms-input-placeholder {
 }
 
 .service .mapdiv {
-    width: 550px; 
+/*    width: 550px; */
     height: 400px; 
 }
 
@@ -752,7 +752,7 @@ input::-ms-input-placeholder {
 
 .calender{
     padding-top: 60px;
-    margin: 10%; 
+    margin: 4%; 
 }
 
 .calender>iframe{
