Vasco added back and other text changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1012,6 +1012,12 @@ input::-ms-input-placeholder {
 }
 
 
+
+
+.othersservice .head_title h3{
+    padding-left: 20px;
+}
+
 /* Team section css */
 .team{
     color:#fff;
