--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -108,6 +108,7 @@ Author URI: http://www.bootstrapthemes.co
         border-color: transparent;
         background-color: rgba(67, 52, 108, 0.5);
         text-align: center;
+        max-height: none;
     }
     .main_menu_bg .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus{
         border-bottom: 0px solid;
